<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/serverstatsborderbox"
                android:orientation="vertical"
                custom:typeface="CuraFont" >

                <com.cura.classes.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/systemVitals"
                    android:textColor="@android:color/primary_text_light"
                    custom:typeface="CuraFont" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical" >

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/hostname"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/hostname"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/listeningip"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/listeningIP"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/kernelversion"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/kernelVersion"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/uptime"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/uptime"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/lastboot"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/lastBoot"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/currentusers"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="Current users: "
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/loadaverages"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="@string/loadAverages"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/serverstatsborderbox"
                android:orientation="vertical" >

                <com.cura.classes.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/memoryUsage"
                    android:textColor="@android:color/primary_text_light"
                    custom:typeface="CuraFont" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical" >

                        <com.cura.classes.TypefacedTextView
                            android:id="@+id/totalMem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dip"
                            android:gravity="center"
                            android:text="@string/totalMemory"
                            custom:typeface="CuraFont" />

                        <com.cura.classes.TypefacedTextView
                            android:id="@+id/usedMem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dip"
                            android:gravity="center"
                            android:text="@string/usedMemory"
                            android:textColor="#7AC65D"
                            custom:typeface="CuraFont" />

                        <com.cura.classes.TypefacedTextView
                            android:id="@+id/freeMem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dip"
                            android:lines="2"
                            android:text="@string/freeMemory"
                            android:textColor="#FF0000"
                            custom:typeface="CuraFont" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/memoryPieChartView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="vertical" >
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/serverstatsborderbox"
                android:orientation="vertical" >

                <com.cura.classes.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/mountedFilesystems"
                    android:textColor="@android:color/primary_text_light"
                    custom:typeface="CuraFont" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical" >

                    <com.cura.classes.TypefacedTextView
                        android:id="@+id/filesystemsoutput"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:textColor="@android:color/white"
                        custom:typeface="CuraFont" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/serverstatsborderbox"
                android:orientation="vertical" >

                <com.cura.classes.TypefacedTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/darker_gray"
                    android:gravity="center"
                    android:text="@string/processesStatus"
                    android:textColor="@android:color/primary_text_light"
                    custom:typeface="CuraFont" />

                <com.cura.classes.TypefacedTextView
                    android:id="@+id/processstatusoutput"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/white"
                    custom:typeface="CuraFont" />

                <com.cura.classes.TypefacedButton
                    android:id="@+id/killprocessbutton"
                    style="@style/kill_button_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dip"
                    android:layout_marginLeft="100dip"
                    android:layout_marginRight="100dip"
                    android:text="@string/killprocess"
                    android:textSize="14sp"
                    custom:typeface="CuraFont" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>