<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <com.cura.classes.TypefacedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="fill_horizontal"
            android:text="@string/syslogTitleMessage"
            custom:typeface="CuraFont" />

        <Spinner
            android:id="@+id/headTail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip" />

        <Spinner
            android:id="@+id/logFiles"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.cura.classes.TypefacedCheckbox
                android:id="@+id/EnableLineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dip"
                android:text="@string/checkBoxSysLogs" />

            <com.cura.classes.TypefacedEditText
                android:id="@+id/LinesNumber"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="2"
                android:numeric="integer"
                custom:typeface="CuraFont" />

            <requestFocus />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.cura.classes.TypefacedButton
                android:id="@+id/sysLogButton"
                style="@style/positive_buttons_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:text="@string/sysLogButtonText"
                android:textSize="14sp"
                custom:typeface="CuraFont" />

            <com.cura.classes.TypefacedButton
                android:id="@+id/sysLogSaveLogsButton"
                style="@style/savelogs_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:text="@string/sysLogSaveLogsButtonText"
                android:textSize="14sp"
                custom:typeface="CuraFont" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>